--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^15.4.2",
     "react-modal": "^1.7.3",
     "react-router-dom": "^4.0.0",
+    "react-router": "2.8.0",
     "tachyons": "^4.6.2"
   },
   "devDependencies": {
