--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "apollo-client": "^1.0.0-rc.5",
+    "connect-history-api-fallback": "^1.3.0",
+    "express": "^4.15.2",
     "graphql-tag": "^1.3.1",
     "react": "^15.4.2",
     "react-apollo": "^1.0.0-rc.3",
@@ -21,6 +23,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "heroku-postinstall": "npm run build",
+    "heroku-start": "node server.js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
