--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "apollo-client": "^1.0.0-rc.5",
     "connect-history-api-fallback": "^1.3.0",
     "express": "^4.15.2",
+    "express-force-ssl": "^0.3.2",
     "graphql-tag": "^1.3.1",
     "react": "^15.4.2",
     "react-apollo": "^1.0.0-rc.3",
