--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-modal": "^1.7.3",
     "react-router": "2.8.0",
     "react-router-dom": "^4.0.0",
+    "shortid": "^2.2.8",
     "styled-components": "^1.4.4",
     "tachyons": "^4.6.2"
   },
