--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "@sanity/default-layout": "^0.142.5",
     "@sanity/default-login": "^0.142.3",
     "@sanity/desk-tool": "^0.142.5",
+    "bluebird": "^3.5.5",
     "prop-types": "^15.6",
     "react": "^16.2",
     "react-dom": "^16.2"
